# openprix

./: .daemon_status.json  .editorconfig  README.md  database.sqlite-shm  database.sqlite-wal  package-lock.json  package.json  setup_env.ps1
core/: Dockerfile  LICENSE.rtf
core/crates/: .daemon_config.json  .daemon_status.json  database.sqlite-shm  database.sqlite-wal
core/crates/console/: Cargo.toml
core/crates/console/src/: app.rs  main.rs
core/crates/console/src/ui/: archive.rs  dashboard.rs  databook.rs  directory.rs  mod.rs  resources.rs  server.rs
core/crates/daemon/: Cargo.toml
core/crates/daemon/src/: main.rs
core/crates/daemon/src/routes/: auth.rs  boqs.rs  db.rs  messages.rs  mod.rs  os.rs  projects.rs  resources.rs  staff.rs
core/crates/daemon/wix/: main.wxs
core/global/: 1779266291257_a840ce88_readme.md  1779266332840_download.xlsx
electron/: connect.html  main.js  preload.cjs
src/: App.css  App.jsx  ConnectPortal.jsx  index.css  main.jsx  webBridge.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: CompanySettings.jsx  DailyLogs.jsx  DatabaseEditor.jsx  Directory.jsx  Home.jsx  Login.jsx  ProjectArchive.jsx  ProjectArchive.styles.js  ProjectWorkspace.jsx  ServerManager.jsx
src/components/common/: AccessDenied.jsx
src/components/database/: AddCategoryModal.jsx  AddDatabookEntryModal.jsx  BackupRestoreTab.jsx  BackupRestoreTab.styles.js  BrandPriceChartModal.jsx  BrandRatesModal.jsx  ConfirmDeleteCategoryModal.jsx  ConfirmDeleteModal.jsx  CreateBoqTab.jsx  CreateBoqTab.styles.js  DatabaseDialog.jsx  DatabookBuilderTab.jsx  (+6 more)
src/context/: AuthContext.jsx
src/engines/: calculationEngine.js  scheduleEngine.js
src/hooks/: usePermissions.js  useProjectCalculations.js  useQueries.js
src/styles/: CompanySettings.css  Login.css  LogoutModal.css  Navbar.css  ResourcesTab.css  Sidebar.css
src/theme/: OpenPrixTheme.js
src/utils/: exportExcel.js  exportPdf.js  security.js
(+30 files in other folders)
