[package]
name = "openprix-tui"
version = "2.0.0"
edition = "2024"
authors = ["GOKUL DC <gokuldc93@gmail.com>"]
description = "OpenPrix Core: High-performance Engineering ERP & Server Daemon"
homepage = "https://github.com/gokuldc/openprix"

[dependencies]
# The UI Framework
ratatui = "0.30.0"
# The Terminal Backend (handles raw mode and keyboard events)
crossterm = "0.29.0"
# File handling and JSON parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Our shared models
shared = { path = "../shared" }
tui-input = { version = "0.15.3", features = ["crossterm"] }
tokio = { version = "1.52.2", features = ["full"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls"] }
uuid = { version = "1.23.1", features = ["v4"] }
chrono = "0.4.44"

[[bin]]
name = "openprix-tui"
path = "src/main.rs"
